test/fail/poly_rec03.v3
//@execute 0=0
class poly_rec03a<T> {
	var f: poly_rec03a<poly_rec03a<T>>;
	new() {
		if (false) f = poly_rec03a<poly_rec03a<T>>.new();
		var i = f;
	}
}
component poly_rec03 {
	def main(arg: int) -> int {
		var o = poly_rec03a<int>.new().f;
		return 0;
	}
}
